--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-      run: echo Welcome to GitHub Actions Training!
+      run: "echo Welcome to GitHub Actions Training!"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
