--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,36 @@
-# This is a basic workflow to help you get started with Actions
-
+# This is a basic workflow to showcase the use of GitHub Actions
+ 
 name: CI
-
+ 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull events but only for the main branch
+  # Triggers the workflow on push or pull request events for the main branch
   push:
     branches: [ main ]
-  pull_requests:
+  pull_request:
     branches: [ main ]
-
-    # Allows you to run this workflow manually from the Actions tab
-    workflow_dispatch:
-
+    
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+ 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  #This workflow rcontains a single job called "BUILD"
   build-and-release:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest # windows-latest, MacOS
-
-    # Steps represent a sequesnceof tasks that will be executed as part of the job
-    steps: 
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
+    runs-on: ubuntu-latest # Other options include: windows-latest, macos-latest
+ 
+    # Steps represent a sequence of tasks to be executed as part of the job
+    steps:
+      # Checks out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout code
+        uses: actions/checkout@v3
+ 
+      # Runs a single command using the runner's shell
       - name: Run a one-line script
-      run: "echo Welcome to GitHub Actions Training!"
-
-      # Runs a set of commands using the runners shell
+        run: echo "Welcome to GitHub Actions Training!"
+ 
+      # Runs a set of commands using the runner's shell
       - name: Run a multi-line script
-        run: | 
-          echo Add other actions to build
-          echo test, and deploy your project.
-          
+        run: |
+          echo "Add other actions to build,"
+          echo "test, and deploy your project."
